--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
 	background-color: #808080;
    	background: #000 url(sidebar.jpg) no-repeat;
     }
-    
+
     .geBackgroundPage{
     position: absolute;
     right:0px;
@@ -26,7 +26,7 @@
     font-size: 12px;
     top: 95px;
     width: 240px;
-    bottom: 46px; 
+    bottom: 46px;
     }
     .geTopbar{
     top: 95px;
@@ -81,14 +81,14 @@
  <div class= "geBtnDown" style="border: none; position: relative; height: 9px; width: 10px;" id="btndown1"></div>
    <div class= "geBtnUp" style="border-bottom: 1px solid rgb(192, 192, 192); position: relative; height: 9px; width: 10px;" id="btnup2"></div>
  <div class= "geBtnDown" style="border: none; position: relative; height: 9px; width: 10px;" id="btndown2"></div>
- <button style="width: 36px; height: 30px; margin: 0px 6px 6px 0px; background-color: rgb(255, 255, 255); border: 1px solid rgb(0, 0, 0);" id="clr1"></button>
- <button style="width: 36px; height: 30px; margin: 0px 6px 6px 0px; background-color: rgb(238, 238, 238); border: 1px solid rgb(54, 57, 61);" id="clr2"></button>
- <button style="width: 36px; height: 30px; margin: 0px 6px 6px 0px; background-color: rgb(249, 247, 237); border: 1px solid rgb(54, 57, 61);" id="clr3"></button>
- <button style="width: 36px; height: 30px; margin: 0px 6px 6px 0px; background-color: rgb(255, 204, 153); border: 1px solid rgb(54, 57, 61);" id="clr4"></button>
- <button style="width: 36px; height: 30px; margin: 0px 6px 6px 0px; background-color: rgb(204, 229, 255); border: 1px solid rgb(54, 57, 61);" id="clr5"></button>
- <button style="width: 36px; height: 30px; margin: 0px 6px 6px 0px; background-color: rgb(255, 255, 136); border: 1px solid rgb(54, 57, 61);" id="clr6"></button>
- <button style="width: 36px; height: 30px; margin: 0px 6px 6px 0px; background-color: rgb(205, 235, 139); border: 1px solid rgb(54, 57, 61);" id="clr7"></button>
- <button style="width: 36px; height: 30px; margin: 0px 6px 6px 0px; background-color: rgb(255, 204, 204); border: 1px solid rgb(54, 57, 61);" id="clr8"></button>
+<!-- <button style="width: 36px; height: 30px; margin: 0px 6px 6px 0px; background-color: rgb(255, 255, 255); border: 1px solid rgb(0, 0, 0);" id="clr1"></button> -->
+<!-- <button style="width: 36px; height: 30px; margin: 0px 6px 6px 0px; background-color: rgb(238, 238, 238); border: 1px solid rgb(54, 57, 61);" id="clr2"></button>-->
+<!-- <button style="width: 36px; height: 30px; margin: 0px 6px 6px 0px; background-color: rgb(249, 247, 237); border: 1px solid rgb(54, 57, 61);" id="clr3"></button>-->
+<!-- <button style="width: 36px; height: 30px; margin: 0px 6px 6px 0px; background-color: rgb(255, 204, 153); border: 1px solid rgb(54, 57, 61);" id="clr4"></button>-->
+<!-- <button style="width: 36px; height: 30px; margin: 0px 6px 6px 0px; background-color: rgb(204, 229, 255); border: 1px solid rgb(54, 57, 61);" id="clr5"></button>-->
+<!-- <button style="width: 36px; height: 30px; margin: 0px 6px 6px 0px; background-color: rgb(255, 255, 136); border: 1px solid rgb(54, 57, 61);" id="clr6"></button>-->
+<!-- <button style="width: 36px; height: 30px; margin: 0px 6px 6px 0px; background-color: rgb(205, 235, 139); border: 1px solid rgb(54, 57, 61);" id="clr7"></button>-->
+<!-- <button style="width: 36px; height: 30px; margin: 0px 6px 6px 0px; background-color: rgb(255, 204, 204); border: 1px solid rgb(54, 57, 61);" id="clr8"></button>-->
     <!-- TODO: add HTML content -->
   </body>
 </html>
